# Hoardbook

./: .gitignore  CANARY.md  Cargo.toml  HANDOVER.md  MILESTONE1.md  README.md  REGRESSION.md  deny.toml
.github/workflows/: ci.yml  release.yml
crates/hb-app/: Cargo.toml  tauri.conf.json
crates/hb-app/capabilities/: default.json
crates/hb-app/src/: backup.rs  conn.rs  dht_service.rs  dm_cache_store.rs  dm_quarantine.rs  heartbeat.rs  identity_state.rs  lib.rs  manifest_cache.rs  net.rs  node.rs  p2p_it.rs  pex.rs  portable_update_logic.rs  presence.rs  relay.rs  single_instance.rs  store.rs  transfer.rs  update_logic.rs  watch.rs
crates/hb-app/src/commands/: browse.rs  chat.rs  collection.rs  dht.rs  groups.rs  identity.rs  mod.rs  online.rs  portable_update.rs  private.rs  profile.rs  settings.rs  sharing.rs  topics.rs  update.rs  watches.rs
crates/hb-app/ui/: .gitignore  eslint.config.js  package-lock.json  package.json  perf-budgets.json  vite.config.ts
crates/hb-app/ui/.svelte-kit/: ambient.d.ts
crates/hb-app/ui/src/: app.css
crates/hb-app/ui/src/lib/: announce-view.test.ts  announce-view.ts  api.ts  backup-export.test.ts  backup-export.ts  beacon-view.test.ts  beacon-view.ts  browse-view.test.ts  browse-view.ts  chat-badges.test.ts  chat-filter.test.ts  chat-filter.ts  chat-names.test.ts  chat-preview.test.ts  chat-preview.ts  chat-realtime.test.ts  collection-row-view.test.ts  collection-row-view.ts  collection_content_types.test.ts  contact-display.test.ts  contact-display.ts  contacts-filter.test.ts  contacts-view.test.ts  contacts-view.ts  content-types.test.ts  content-types.ts  copy-audit.test.ts  copy-audit.ts  default_relays.json  discover-view.test.ts  discover-view.ts  dm-inbox.test.ts  download-queue.test.ts  fingerprint_vectors.json  icons.ts  identity-display.test.ts  identity-display.ts  image-compress.ts  key-view.test.ts  key-view.ts  (+31 more)
crates/hb-app/ui/src/lib/components/: AZRail.svelte  AddCollectionModal.svelte  AddCollectionModal.test.ts  AddContactDialog.svelte  AddContactDialog.test.ts  AddContactPanel.svelte  Avatar.svelte  Avatar.test.ts  CollectionDetailsForm.svelte  CollectionPanel.svelte  CollectionRow.svelte  CollectionRow.test.ts  CollectionTagsEditor.svelte  CollectionTagsEditor.test.ts  ConfirmButton.svelte  ConfirmButton.test.ts  CreateGroupDialog.svelte  CreateGroupDialog.test.ts  DirItem.svelte  DownloadQueue.svelte  FeatureTooltip.svelte  FeatureTooltip.test.ts  HintMarker.svelte  HintMarker.test.ts  Modal.svelte  Modal.test.ts  OverflowMenu.svelte  OverflowMenu.test.ts  ProfileCard.svelte  ScanDialog.svelte  ScanTreeNode.svelte  TopicJoinConsent.svelte  TopicJoinConsent.test.ts  VisibilitySelector.svelte  VisibilitySelector.test.ts
crates/hb-app/ui/src/lib/profiling/: fixture.ts  gate.ts  profile.test.ts  profile.ts
crates/hb-app/ui/src/routes/: +layout.svelte  +page.svelte
crates/hb-app/ui/src/routes/browse/: +page.svelte
crates/hb-app/ui/src/routes/chat/: +page.svelte
crates/hb-app/ui/src/routes/contacts/: +page.svelte
crates/hb-app/ui/src/routes/settings/: +page.svelte
crates/hb-app/ui/src/routes/topics/: +page.svelte
crates/hb-core/: Cargo.toml
crates/hb-core/src/: backup.rs  binding.rs  count.rs  crypto.rs  dm_cache.rs  envelope.rs  error.rs  event.rs  fingerprint.rs  gate.rs  identity.rs  inv2_sweep.rs  lib.rs  listing.rs  manifest.rs  priv_listing.rs  ratelimit.rs  sharecode.rs  snapshot.rs  tag_util.rs  topic.rs  types.rs  version.rs  wire_freeze.rs
crates/hb-dpapi/: Cargo.toml
crates/hb-dpapi/src/: lib.rs
crates/hb-it/: Cargo.toml  strfry-bigrelay.conf  strfry.conf
crates/hb-it/src/: canary.rs  harness.rs  helpers.rs  main.rs  same_nat.rs  suite_a.rs  suite_ab.rs  suite_b.rs  suite_bigrelay.rs  suite_browse.rs  suite_canary.rs  suite_count.rs  suite_d.rs  suite_disc.rs  suite_dm.rs  suite_h.rs  suite_id.rs  suite_n.rs  suite_priv.rs  suite_relay.rs  suite_topic.rs  survey.rs  tap.rs
crates/hb-m0-spike/: Cargo.toml  README.md  strfry.conf
crates/hb-m0-spike/src/: binding.rs  identity.rs  lib.rs  listing.rs  relay.rs
crates/hb-net/: Cargo.toml
crates/hb-net/src/: browse.rs  cache.rs  client.rs  count.rs  discover.rs  dm.rs  error.rs  lib.rs  nip09.rs  nip65.rs  pow.rs  priv_browse.rs  render.rs  split.rs  topic.rs
crates/hb-relay/: Cargo.toml
crates/hb-relay/src/: db.rs  handlers.rs  main.rs  state.rs
planning/: integration-test-plan.md  security-fixes.md  security-review.md
