[package]
name    = "hb-core"
version = "0.4.3"
edition = "2021"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
chrono     = { workspace = true }
hex        = { workspace = true }

# --- v0.9 Nostr core (M1). Pinned to the M0-verified surface (=0.43.1) so a silent
#     minor bump can't break the interop suite. bech32 0.11 = the `Hrp`/encode/decode API. ---
nostr             = { version = "=0.43.1", features = ["nip44"] }
bech32            = "0.11"

# --- M5 portable backup crypto: Argon2id (KDF) → XChaCha20-Poly1305 (AEAD). `zeroize`
#     wipes the derived key; `unicode-normalization` NFKC-normalizes the passphrase so a backup
#     made on one OS decrypts on another. XChaCha20-Poly1305 ships in `chacha20poly1305` 0.10 with
#     no extra feature (the brief's `xchacha20poly1305` feature does not exist in this version);
#     the default `alloc` feature provides the AAD `Payload` API. ---
argon2                = { workspace = true }
unicode-normalization = { workspace = true }
zeroize               = { workspace = true }

# --- legacy v0.4.3 core (these became unused when M4 deleted the legacy crypto/envelope/jcs
#     modules; left in place — removing them is out of M5 scope. `chacha20poly1305` is revived
#     by the M5 backup core). ---
ed25519-dalek     = { version = "2", features = ["rand_core"] }
rand              = "0.8"
sha2              = "0.10"
bs58              = "0.5"
x25519-dalek      = { version = "2", features = ["static_secrets"] }
chacha20poly1305  = "0.10"
hkdf              = "0.12"
base64            = "0.22"

[dev-dependencies]
tokio = { workspace = true }
