[package]
name    = "hb-m0-spike"
version = "0.0.0"
edition = "2021"
publish = false

# M0 foundation spike (HOARDBOOK_SPEC.md "Path to v1.0" → M0). Throwaway code whose
# only job is a go/no-go on four v0.9 unknowns before the M1 hb-core rewrite commits:
#   leg 1  the `nostr` crate (secp256k1 keys, npub/NIP-19, NIP-01 sign/verify)
#   leg 2  the npub -> iroh-node binding (secp256k1 Schnorr over the Ed25519 node key)
#   leg 3  NIP-44 listing encryption under a *symmetric* browse-key
#   leg 4  a strfry relay accepting our custom kinds + a fresh key
# Not wired into the app. Delete once M1 lands the production equivalents.

[dependencies]
# rust-nostr: the relay Client (leg 4) re-exports the `nostr` prelude (keys, NIP-19, events).
nostr-sdk  = "0.43"
# Direct `nostr` dep pinned to the same version, with nip44 on — gives a stable
# `nostr::nips::nip44::v2` path for leg 3 and guarantees the feature is enabled.
nostr      = { version = "0.43", features = ["nip44"] }
# Real iroh node-key types so the binding leg is honest (matches hb-app's pin).
iroh       = { version = "0.98", default-features = false, features = ["tls-ring"] }

# Versioned HKDF for the browse-key -> NIP-44 conversation-key derivation (leg 3),
# matching hb-core/crypto.rs's versioned-salt pattern.
hkdf       = "0.12"
sha2       = "0.10"
rand       = "0.8"

tokio      = { workspace = true }
anyhow     = { workspace = true }
hex        = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "hb-m0-spike"
path = "src/bin/hb-m0-spike.rs"
